JumpScript/tests/baselines/reference/thisInModule.errors.txt
tests/cases/compiler/thisInModule.jump(3,5): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== tests/cases/compiler/thisInModule.jump (1 errors) ====
    module myMod {
        var x;
        this.x = 5;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }